--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>MAI BUDDY</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/png" href="favicon.png" />
+<link rel="shortcut icon" href="favicon.png" type="image/png" />
 </head>
 <body>
   <header class="hero">
