--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MAI BUDDY</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/png" href="favicon.png" />
-<link rel="shortcut icon" href="favicon.png" type="image/png" />
+  <link rel="icon" type="image/png" href="/favicon.png">
 </head>
 <body>
   <header class="hero">
