--- a/Support.html
+++ b/Support.html
@@ -1,15 +1,26 @@
-<h1>Support</h1>
-<p>If you need help with MAI Buddy, we’re here for you.</p>
-
-<h2>Contact Us</h2>
-<p>For technical support, bug reports, or feedback, please email:</p>
-<p><strong><a href="mailto:support@mai-buddy.com">support@mai-buddy.com</a></strong></p>
-
-<h2>FAQs</h2>
-<ul>
-  <li><strong>Is MAI Buddy free?</strong><br>Yes, the core version is completely free to use. Optional in-app features may be available in the future.</li>
-  <li><strong>Do I need to sign up to use MAI Buddy?</strong><br>No sign-up is required. You can begin chatting right away.</li>
-  <li><strong>Is my data safe?</strong><br>Yes. Please refer to our <a href="/privacy">Privacy Policy</a> for full details.</li>
-</ul>
-
-<p>We aim to respond to support requests within 1–2 business days.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Support - MAI BUDDY</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
+</head>
+<body>
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">MAI BUDDY</div>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+      </ul>
+    </nav>
+    <div class="hero-content">
+      <h1>Support</h1>
+      <p>If you need assistance, please email us at <strong>support@mai-buddy.com</strong>.</p>
+    </div>
+  </header>
+</body>
+</html>
