--- a/Privacy.html
+++ b/Privacy.html
@@ -1,30 +1,26 @@
-<h1>Privacy Policy</h1>
-<p><strong>Effective Date:</strong> August 1, 2025</p>
-
-<p>MAI Buddy respects your privacy. This Privacy Policy outlines how we handle your information:</p>
-
-<h2>Information We Collect</h2>
-<ul>
-  <li><strong>Usage Data:</strong> We collect anonymized data to improve app functionality and user experience.</li>
-  <li><strong>Chat Logs:</strong> Your chats are processed on-device or securely via our backend to help you track your thoughts. No personal information is required.</li>
-</ul>
-
-<h2>What We Do With Your Data</h2>
-<ul>
-  <li>We use it to improve MAI Buddy’s responses and wellness insights.</li>
-  <li>We never sell your data. Ever.</li>
-</ul>
-
-<h2>Your Privacy Options</h2>
-<ul>
-  <li>You can clear your memory/logs at any time within the app.</li>
-  <li>You may request full data deletion by contacting <a href="mailto:support@mai-buddy.com">support@mai-buddy.com</a>.</li>
-</ul>
-
-<h2>Third-Party Services</h2>
-<p>MAI Buddy does not use advertising or third-party analytics tools that track you across apps.</p>
-
-<h2>Policy Updates</h2>
-<p>We may update this policy occasionally. Updates will be posted here with a new effective date.</p>
-
-<p>If you have questions about this policy, please contact us at <a href="mailto:support@mai-buddy.com">support@mai-buddy.com</a>.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - MAI BUDDY</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
+</head>
+<body>
+  <header class="hero">
+    <nav class="navbar">
+      <div class="logo">MAI BUDDY</div>
+      <ul class="nav-links">
+        <li><a href="/">Home</a></li>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+      </ul>
+    </nav>
+    <div class="hero-content">
+      <h1>Privacy Policy</h1>
+      <p>Your data is yours. MAI BUDDY does not store or sell any personal information. All interactions are encrypted end-to-end.</p>
+    </div>
+  </header>
+</body>
+</html>
