--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="logo">MAI BUDDY</div>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
-        <li><a href="/support.html">Support</a></li>
-        <li><a href="/privacy.html">Privacy</a></li>
+        <li><a href="support.html">Support</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
       </ul>
     </nav>
     <div class="hero-content">
