--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="#privacy">Privacy</a></li><li><a href="#support">Support</a></li>
                 <li><a href="#download" class="download-btn">Download</a></li>
             </ul>
         </div>
@@ -692,14 +692,40 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    
+<!-- Support Section -->
+<section id="support" class="features">
+  <div class="features-container">
+    <h2 class="section-title">Support</h2>
+    <div class="features-grid">
+      <div class="feature-card scroll-fade">
+        <h3>Need Help?</h3>
+        <p>If you're experiencing issues or have questions, reach out to our team at <a href="mailto:support@mai-buddy.com">support@mai-buddy.com</a>.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Privacy Section -->
+<section id="privacy" class="features">
+  <div class="features-container">
+    <h2 class="section-title">Privacy</h2>
+    <div class="features-grid">
+      <div class="feature-card scroll-fade">
+        <h3>Your Data, Your Control</h3>
+        <p>We take your privacy seriously. MAI Buddy does not store or share your personal data. All conversations are encrypted and remain private to your device unless you choose to back them up manually.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Footer -->
     <footer id="contact" class="footer">
         <div class="footer-container">
             <div class="footer-logo"><span class="mai">MAI</span> BUDDY</div>
             <ul class="footer-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="support.html">Support</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="#privacy">Privacy</a></li><li><a href="#support">Support</a></li>
             </ul>
             <div class="footer-copyright">
                 © 2025 MAI Buddy. All rights reserved.
