--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         }
 
         .btn-primary {
-            background: #2d3748;
+            background: #c8d0de;
             color: white;
             padding: 1rem 2rem;
             border-radius: 8px;
