--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             text-decoration: none;
             font-weight: 600;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 4px 15px rgba(45, 55, 72, 0.4);
+            box-shadow: 0 4px 15px rgba(45, 55, 72, 0.3);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
@@ -141,7 +141,7 @@
         }
 
         .btn-primary {
-            background: #c8d0de;
+            background: #6681b0;
             color: white;
             padding: 1rem 2rem;
             border-radius: 8px;
