--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
 
         .download-btn {
-            background: rgba(45, 55, 72, 0.9);
+            background: #6681b0;
             color: white;
             padding: 0.75rem 1.5rem;
             border-radius: 8px;
