--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
 
         .download-btn {
-            background: #6681b0;
+            background: #2795F5;
             color: white;
             padding: 0.75rem 1.5rem;
             border-radius: 8px;
@@ -141,7 +141,7 @@
         }
 
         .btn-primary {
-            background: #6681b0;
+            background: #2795F5;
             color: white;
             padding: 1rem 2rem;
             border-radius: 8px;
