--- a/support.html
+++ b/support.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Support - MAI BUDDY</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="/favicon.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Support - MAI Buddy</title>
+    <meta name="description" content="Support page for MAI Buddy.">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤗</text></svg>">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
+    <style>
+        /* Reusing styles from your main page for consistency */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #2d3748; background: #f7fafc; }
+        .navbar { position: fixed; top: 0; left: 0; right: 0; background: linear-gradient(135deg, #f6d55c 0%, #f4c430 50%, #e6a23c 100%); z-index: 1000; padding: 1rem 0; }
+        .nav-container { max-width: 1200px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; padding: 0 2rem; }
+        .logo { font-size: 1.5rem; font-weight: 700; color: #2d3748; text-decoration: none; font-family: 'Fredoka One', cursive; }
+        .logo .mai { color: #e6a23c; }
+        .nav-links { display: flex; list-style: none; gap: 2rem; align-items: center; }
+        .nav-links a { text-decoration: none; color: #2d3748; font-weight: 500; }
+        .download-btn { background: #2795F5; color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; }
+        .page-content { padding: 8rem 2rem 4rem; max-width: 900px; margin: 0 auto; }
+        .page-content h1 { font-size: 2.5rem; font-family: 'Fredoka One', cursive; margin-bottom: 2rem; color: #1a202c; }
+        .page-content p { margin-bottom: 1.5rem; font-size: 1.1rem; }
+        .footer { background: linear-gradient(135deg, #f6d55c 0%, #f4c430 50%, #e6a23c 100%); padding: 3rem 0; }
+        .footer-container { max-width: 1200px; margin: 0 auto; padding: 0 2rem; display: flex; justify-content: space-between; align-items: center; }
+        .footer-links { display: flex; gap: 2rem; list-style: none; }
+        .footer-links a { color: #4a5568; text-decoration: none; font-weight: 500; }
+        .footer-copyright { color: #718096; font-size: 0.9rem; }
+    </style>
 </head>
 <body>
-  <header class="hero">
     <nav class="navbar">
-      <div class="logo">MAI BUDDY</div>
-      <ul class="nav-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="support.html">Support</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-      </ul>
+        <div class="nav-container">
+            <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="support.html">Support</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="#download" class="download-btn">Download</a></li>
+            </ul>
+        </div>
     </nav>
-    <div class="hero-content">
-      <h1>Support</h1>
-      <p>If you need assistance, please email us at <strong>support@mai-buddy.com</strong>.</p>
-    </div>
-  </header>
+
+    <main class="page-content">
+        <h1>Support</h1>
+        <p>We're here to help! If you are experiencing any issues with MAI Buddy or have a question, please don't hesitate to reach out.</p>
+        <p><strong>Contact Us:</strong> The best way to get in touch with our support team is by emailing us directly. We aim to respond to all inquiries within 24-48 hours.</p>
+        <p><strong>Email:</strong> <a href="mailto:support@mai-buddy.com">support@mai-buddy.com</a></p>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-logo"><span class="mai">MAI</span> BUDDY</div>
+            <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="support.html">Support</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+            </ul>
+            <div class="footer-copyright">© 2025 MAI Buddy. All rights reserved.</div>
+        </div>
+    </footer>
 </body>
 </html>
