Added About Page

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - MAI Buddy</title>
-    <meta name="description" content="Privacy Policy for MAI Buddy.">
+    <title>About Us - MAI Buddy</title>
+    <meta name="description" content="Learn about the mission behind MAI Buddy.">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤗</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <style>
+    <style>
         /* Reusing styles from your main page for consistency */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #2d3748; background: #f7fafc; }
@@ -30,24 +30,23 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="nav-container">
-        <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="privacy.html">Privacy</a></li>
-            <li><a href="#download" class="download-btn">Download</a></li>
-        </ul>
-    </div>
-</nav>
+        <div class="nav-container">
+            <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="support.html">Support</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="#download" class="download-btn">Download</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <main class="page-content">
-        <h1>Privacy Policy</h1>
-        <p>Your privacy is our top priority. MAI Buddy is designed to be a private and secure space for your personal reflections.</p>
-        <p><strong>Data Collection:</strong> We do not collect, store, or share any of your personal journal entries or conversation data. All information you share with MAI Buddy remains on your device and is protected by encryption.</p>
-        <p><strong>Analytics:</strong> We may collect anonymous usage data to help us improve the app's performance and features. This data is completely anonymized and cannot be linked to any individual user.</p>
-        <p><strong>Your Control:</strong> You have full control over your data. You can export or delete your entire journal history from within the app at any time. Your thoughts and feelings remain completely private and secure.</p>
+        <h1>About MAI Buddy</h1>
+        <p>MAI Buddy was born from a simple idea: everyone deserves a safe space to reflect and grow. In a world that's always moving, taking a moment for yourself is more important than ever. We wanted to create a companion that's always there to listen, without judgment, and to help you navigate the ups and downs of life.</p>
+        <p><strong>Our Mission:</strong> Our mission is to make mental wellness accessible to everyone. We believe that by providing personalized, AI-powered support, we can help people build healthier mental habits, gain clarity, and find a sense of calm in their daily lives.</p>
+        <p>We are a small team of developers, designers, and mental health advocates dedicated to creating a tool that is not only effective but also private and secure. Your journey is your own, and we're just here to provide a helping hand along the way.</p>
     </main>
 
     <footer class="footer">
@@ -55,6 +54,7 @@
             <div class="footer-logo"><span class="mai">MAI</span> BUDDY</div>
             <ul class="footer-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="support.html">Support</a></li>
                 <li><a href="privacy.html">Privacy</a></li>
             </ul>
