--- a/index.html
+++ b/index.html
@@ -566,16 +566,17 @@
 
 <body>
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="support.html">Support</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
-                <li><a href="#download" class="download-btn">Download</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="nav-container">
+        <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="support.html">Support</a></li>
+            <li><a href="privacy.html">Privacy</a></li>
+            <li><a href="#download" class="download-btn">Download</a></li>
+        </ul>
+    </div>
+</nav>
 
     <section id="home" class="hero">
         <div class="hero-container">
