--- a/support.html
+++ b/support.html
@@ -30,16 +30,17 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="support.html">Support</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
-                <li><a href="#download" class="download-btn">Download</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="nav-container">
+        <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="support.html">Support</a></li>
+            <li><a href="privacy.html">Privacy</a></li>
+            <li><a href="#download" class="download-btn">Download</a></li>
+        </ul>
+    </div>
+</nav>
 
     <main class="page-content">
         <h1>Support</h1>
