--- a/privacy.html
+++ b/privacy.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - MAI Buddy</title>
     <meta name="description" content="Privacy Policy for MAI Buddy.">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤗</text></svg>">
+    <link rel="icon" href="images/Bobby.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <style>
+    <style>
         /* Reusing styles from your main page for consistency */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #2d3748; background: #f7fafc; }
@@ -30,17 +30,17 @@
 </head>
 <body>
     <nav class="navbar">
-    <div class="nav-container">
-        <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="support.html">Support</a></li>
-            <li><a href="privacy.html">Privacy</a></li>
-            <li><a href="#download" class="download-btn">Download</a></li>
-        </ul>
-    </div>
-</nav>
+        <div class="nav-container">
+            <a href="index.html" class="logo"><span class="mai">MAI</span> BUDDY</a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="support.html">Support</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="#download" class="download-btn">Download</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <main class="page-content">
         <h1>Privacy Policy</h1>
@@ -55,6 +55,7 @@
             <div class="footer-logo"><span class="mai">MAI</span> BUDDY</div>
             <ul class="footer-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="support.html">Support</a></li>
                 <li><a href="privacy.html">Privacy</a></li>
             </ul>
